[gd_scene format=3 uid="uid://bxxkefcq87dud"]

[ext_resource type="Script" uid="uid://d0tfx87gtkfxo" path="res://addons/godot-openmpt/view/mpt_view.gd" id="1_51omn"]
[ext_resource type="Theme" uid="uid://chbppoc3hcchk" path="res://boxtheme.tres" id="2_yh6a0"]

[sub_resource type="SystemFont" id="SystemFont_h0gs2"]
font_names = PackedStringArray("Deus Ex Console")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_h0gs2"]
font = SubResource("SystemFont_h0gs2")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_yh6a0"]
font_size = 64

[node name="MptView" type="Control" unique_id=969663008]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_51omn")

[node name="ActiveWindow" type="HSplitContainer" parent="." unique_id=826115615]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.025
anchor_right = 1.0
anchor_bottom = 0.9710001
offset_bottom = 0.3199463
split_offsets = PackedInt32Array(0, -432, 433)
dragging_enabled = false

[node name="LeftMargin" type="Control" parent="ActiveWindow" unique_id=763095583]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="LeftPanel" type="VSplitContainer" parent="ActiveWindow" unique_id=1983659702]
layout_mode = 2
split_offsets = PackedInt32Array(28, 202, 285, -175)
dragging_enabled = false
split_offset = 28

[node name="ModuleListLabel" type="Label" parent="ActiveWindow/LeftPanel" unique_id=722275736]
layout_mode = 2
tooltip_text = "A module may have multiple sub-sequences for dynamic music playback e.g the .umx files for Deus Ex"
mouse_filter = 0
text = "Modules"
label_settings = SubResource("LabelSettings_h0gs2")
horizontal_alignment = 1

[node name="ModuleList" type="ItemList" parent="ActiveWindow/LeftPanel" unique_id=1045507018]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_yh6a0")
auto_width = true
auto_height = true
same_column_width = true
icon_mode = 0

[node name="MetadataLabel" type="Label" parent="ActiveWindow/LeftPanel" unique_id=1203605728]
layout_mode = 2
size_flags_horizontal = 4
text = "Metadata"
label_settings = SubResource("LabelSettings_h0gs2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Metadata" type="Label" parent="ActiveWindow/LeftPanel" unique_id=404276722]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_yh6a0")

[node name="GridContainer" type="HBoxContainer" parent="ActiveWindow/LeftPanel" unique_id=885548853]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="SubsongContainer" type="VSplitContainer" parent="ActiveWindow/LeftPanel/GridContainer" unique_id=1681399793]
layout_mode = 2
split_offsets = PackedInt32Array(31, 4, 31, -166)
split_offset = 31

[node name="SubsongLabel" type="Label" parent="ActiveWindow/LeftPanel/GridContainer/SubsongContainer" unique_id=299513881]
layout_mode = 2
tooltip_text = "A module may have multiple sub-sequences for dynamic music playback e.g the .umx files for Deus Ex"
mouse_filter = 0
text = "Subsongs"
label_settings = SubResource("LabelSettings_h0gs2")
horizontal_alignment = 1

[node name="Subsongs" type="ItemList" parent="ActiveWindow/LeftPanel/GridContainer/SubsongContainer" unique_id=1297861161]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_yh6a0")
auto_width = true
auto_height = true
same_column_width = true
icon_mode = 0

[node name="PlayButton" type="Button" parent="ActiveWindow/LeftPanel/GridContainer/SubsongContainer" unique_id=658531572]
layout_mode = 2
theme = ExtResource("2_yh6a0")
text = "Play"

[node name="StopButton" type="Button" parent="ActiveWindow/LeftPanel/GridContainer/SubsongContainer" unique_id=720801729]
layout_mode = 2
theme = ExtResource("2_yh6a0")
text = "Stop"

[node name="Margin" type="Control" parent="ActiveWindow/LeftPanel/GridContainer/SubsongContainer" unique_id=1470303555]
layout_mode = 2
size_flags_vertical = 3

[node name="PatternContainer" type="VSplitContainer" parent="ActiveWindow/LeftPanel/GridContainer" unique_id=167278573]
layout_mode = 2
split_offsets = PackedInt32Array(28)
dragging_enabled = false
split_offset = 28

[node name="SequenceLabel" type="Label" parent="ActiveWindow/LeftPanel/GridContainer/PatternContainer" unique_id=1842215757]
layout_mode = 2
text = "Sequence"
label_settings = SubResource("LabelSettings_h0gs2")
horizontal_alignment = 1

[node name="Patterns" type="ItemList" parent="ActiveWindow/LeftPanel/GridContainer/PatternContainer" unique_id=466041385]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_yh6a0")
allow_search = false
auto_width = true
same_column_width = true
icon_mode = 0

[node name="RightPanel" type="VSplitContainer" parent="ActiveWindow" unique_id=147010989]
layout_mode = 2
size_flags_horizontal = 3
split_offsets = PackedInt32Array(28, 80)
split_offset = 28

[node name="SongTitle" type="Label" parent="ActiveWindow/RightPanel" unique_id=1204791891]
layout_mode = 2
text = "Song Title"
label_settings = SubResource("LabelSettings_h0gs2")
horizontal_alignment = 1

[node name="Playback" type="Label" parent="ActiveWindow/RightPanel" unique_id=1600057140]
layout_mode = 2
size_flags_vertical = 0
label_settings = SubResource("LabelSettings_h0gs2")
horizontal_alignment = 1

[node name="ChannelGrid" type="GridContainer" parent="ActiveWindow/RightPanel" unique_id=1911730481]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
columns = 8

[node name="RightMargin" type="Control" parent="ActiveWindow" unique_id=141283199]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="InactiveLabel" type="Label" parent="." unique_id=1770671197]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
text = "Select a ModTracker Node Type 
to view details on this screen"
label_settings = SubResource("LabelSettings_yh6a0")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="item_selected" from="ActiveWindow/LeftPanel/ModuleList" to="." method="_on_module_list_item_selected"]
[connection signal="pressed" from="ActiveWindow/LeftPanel/GridContainer/SubsongContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ActiveWindow/LeftPanel/GridContainer/SubsongContainer/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="item_clicked" from="ActiveWindow/LeftPanel/GridContainer/PatternContainer/Patterns" to="." method="_on_patterns_item_clicked"]
